--- a/Device_test/FJ300.csproj
+++ b/Device_test/FJ300.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{FA30C6B4-6657-44AA-AD3B-14C77AEB22FD}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Device_test</RootNamespace>
-    <AssemblyName>Device_test</AssemblyName>
+    <RootNamespace>FJ3000</RootNamespace>
+    <AssemblyName>FJ3000</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -24,7 +24,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>5</ApplicationRevision>
+    <ApplicationRevision>7</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
